Fixed drag handle appearance on small screens

--- a/app/assets/scss/components/_task-list.scss
+++ b/app/assets/scss/components/_task-list.scss
@@ -10,6 +10,8 @@
 }
 
 .task-list__drag-handle {
+	flex-shrink: 0;
+
 	margin-right: 1ch;
 
 	cursor: move;
